# CC3096_Game_Engine_Architecture

./: CMakeLists.txt  README.md  conanfile.txt  createLib.sh  run.sh
src/: main.cpp
src/Entity/: Entity.cpp  Entity.h
src/Game/: Game.cpp  Game.h
src/Scene/: Scene.cpp  Scene.h
